<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".RoleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="30dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="1dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/ktr_app_name"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"/>

    <!--<android.support.design.widget.TextInputLayout-->
    <!--style="@style/Widget.Shrine.TextInputLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:hint="@string/ktr_hint_username">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="text"-->
    <!--android:maxLines="1" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

    <!--<android.support.design.widget.TextInputLayout-->
    <!--android:id="@+id/password_text_input"-->
    <!--style="@style/Widget.Shrine.TextInputLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="1dp"-->
    <!--android:hint="@string/ktr_hint_password"-->
    <!--app:errorEnabled="true">-->

    <!--<android.support.design.widget.TextInputEditText-->
    <!--android:id="@+id/password_edit_text"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:inputType="textPassword" />-->

    <!--</android.support.design.widget.TextInputLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <android.support.design.button.MaterialButton
                android:id="@+id/auth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/ktr_yes" />

            <android.support.design.button.MaterialButton
                android:id="@+id/provider_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/auth_button"
                android:layout_toLeftOf="@id/auth_button"
                android:text="@string/ktr_no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_toStartOf="@id/provider_button"
                android:layout_toLeftOf="@id/auth_button"
                android:text="@string/ktr_ask_role"
                android:textSize="14sp"
                android:visibility="visible" />

        </RelativeLayout>


    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <!--&lt;!&ndash;android:layout_marginBottom="20dp"&ndash;&gt;-->

    <!--<View-->
    <!--android:id="@+id/divider"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="2dp"-->
    <!--android:background="@android:color/darker_gray"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:visibility="visible" />-->

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@android:color/white"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:text="  or  " />-->

    <!--</RelativeLayout>-->

    </LinearLayout>
</ScrollView>